# covid19_model

./: .gitignore  LICENSE  MANIFEST.in  README.md  data.ipynb  main.ipynb  main.py  minimal.ipynb  phase_plane.ipynb  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
covid19_model/: __init__.py  main.py
covid19_model/models/: __init__.py  models.c  models.pyx  pymodels.py
covid19_model/solver/: solver.c  solver.pyx
covid19_model/visualizer/: visualizer.py
src/covid19_model/: main.py  models.c  models.pyx  solver.c  solver.pyx  visualizer.py
